--- a/1_Descriptive_data_analisy.ipynb
+++ b/1_Descriptive_data_analisy.ipynb
@@ -9,35 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bibliotecas padrão para manipulação do sistema operacional\n",
-    "import os  \n",
-    "import shutil\n",
-    "# Bibliotecas para automação web\n",
-    "from selenium import webdriver\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "# Biblioteca para identificação do encoding de um arquivo\n",
-    "import chardet\n",
-    "# Bibliotecas para manipulação de dados\n",
-    "import math\n",
     "import numpy as np  # Manipulação de matrizes\n",
     "import pandas as pd  # Manipulação de dados tabulares\n",
-    "import re  # Manipulação de textos\n",
-    "import datetime  # Manipulação de data e hora\n",
-    "import time  # Manipulação de data e hora\n",
-    "import xlrd  # Manipulação de excel xls\n",
     "# Bibliotecs de visualização gráfica\n",
     "import plotly.express as px\n",
-    "# Biblioiteca de deploy\n",
-    "import streamlit as st\n",
     "# Bibliotecas próprias\n",
-    "from biblioteca.data_extraction import *  # Biblioteca própria para extração dos dados\n",
-    "from biblioteca.data_transform import *  # Biblioteca própria para transformação dos dados\n",
-    "# Biblioteca de Ml\n",
-    "from pycaret.time_series import *\n",
+    "from ETL.Data_extraction import *  # Biblioteca própria para extração dos dados\n",
+    "from ETL.Data_transformation import *  # Biblioteca própria para transformação dos dados\n",
     "# Biblioteca de filtro de notificações\n",
     "import warnings\n",
     "\n",
@@ -60,24 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arquivo 2023 desatualizado, refazendo download.\n"
+      "Arquivo 2024 desatualizado, refazendo download.\n"
      ]
     }
    ],
    "source": [
-    "update_data(fold='./dados')"
+    "upgrade_data(fold='./RAW_DATAS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,102 +82,107 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>TIPO DE REPASSE</th>\n",
        "      <th>ESFERA</th>\n",
        "      <th>UF</th>\n",
+       "      <th>COMPETÊNCIA</th>\n",
        "      <th>REPASSE</th>\n",
        "      <th>TOTAL AJUSTE</th>\n",
        "      <th>TOTAL LIQUIDO</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COMPETÊNCIA</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>CATEGORIA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-11-01</th>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>IPI</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>8,443,721.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009-07-01</th>\n",
+       "      <th>146339</th>\n",
        "      <td>Municipal</td>\n",
-       "      <td>RO</td>\n",
-       "      <td>COUN_VAAT</td>\n",
+       "      <td>RR</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>ITCMD</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>4,862.10</td>\n",
+       "      <td>ITCMD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-07-01</th>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>FPE</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6,141,958.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-03-01</th>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>ICMS</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>125,283,563.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007-07-01</th>\n",
+       "      <th>133197</th>\n",
        "      <td>Municipal</td>\n",
        "      <td>PR</td>\n",
-       "      <td>COUN_VAAT</td>\n",
+       "      <td>2007-11-01</td>\n",
+       "      <td>Ajuste</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>Outros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10864</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2017-09-01</td>\n",
+       "      <td>AFE_EC123</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Outros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2976</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>ICMS</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>ICMS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149622</th>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>2015-08-01</td>\n",
+       "      <td>COUN_VAAR</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Complementação VAAR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ESFERA  UF    REPASSE  TOTAL AJUSTE  TOTAL LIQUIDO\n",
-       "COMPETÊNCIA                                                       \n",
-       "2019-11-01    Estadual  SP        IPI          0.00   8,443,721.42\n",
-       "2009-07-01   Municipal  RO  COUN_VAAT          0.00           0.00\n",
-       "2017-07-01    Estadual  ES        FPE          0.00   6,141,958.71\n",
-       "2016-03-01   Municipal  ES       ICMS          0.00 125,283,563.33\n",
-       "2007-07-01   Municipal  PR  COUN_VAAT          0.00           0.00"
+       "TIPO DE REPASSE     ESFERA  UF COMPETÊNCIA    REPASSE  TOTAL AJUSTE  \\\n",
+       "146339           Municipal  RR  2014-01-01      ITCMD          0.00   \n",
+       "133197           Municipal  PR  2007-11-01     Ajuste          0.00   \n",
+       "10864             Estadual  AP  2017-09-01  AFE_EC123          0.00   \n",
+       "2976              Estadual  AC  2024-09-01       ICMS          0.00   \n",
+       "149622           Municipal  RS  2015-08-01  COUN_VAAR          0.00   \n",
+       "\n",
+       "TIPO DE REPASSE  TOTAL LIQUIDO            CATEGORIA  \n",
+       "146339                4,862.10                ITCMD  \n",
+       "133197                    0.00               Outros  \n",
+       "10864                     0.00               Outros  \n",
+       "2976                      0.00                 ICMS  \n",
+       "149622                    0.00  Complementação VAAR  "
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('./data.csv', parse_dates=['COMPETÊNCIA'], index_col='COMPETÊNCIA')\n",
-    "display(df.sample(5))\n",
-    "\n",
-    "df_e = df[df.ESFERA == 'Estadual']\n",
-    "df_e = df_e[df_e.index <= '2023-10-31']\n",
-    "\n",
-    "df_m = df[df.ESFERA == 'Municipal']\n",
-    "df_m = df_m[df_m.index <= '2023-10-31']\n"
+    "df = pd.read_parquet('./DATASETS/summarized_data.parquet')\n",
+    "df.sample(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **ANÁLISE EXPLORATÓRIA**"
+    "# **ANÁLISE DESCRITIVA**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,22 +190,52 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 154224 entries, 2007-01-01 to 2023-12-01\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column         Non-Null Count   Dtype  \n",
-      "---  ------         --------------   -----  \n",
-      " 0   ESFERA         154224 non-null  object \n",
-      " 1   UF             154224 non-null  object \n",
-      " 2   REPASSE        154224 non-null  object \n",
-      " 3   TOTAL AJUSTE   154224 non-null  float64\n",
-      " 4   TOTAL LIQUIDO  154224 non-null  float64\n",
-      "dtypes: float64(2), object(3)\n",
-      "memory usage: 7.1+ MB\n"
+      "RangeIndex: 163296 entries, 0 to 163295\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column         Non-Null Count   Dtype         \n",
+      "---  ------         --------------   -----         \n",
+      " 0   ESFERA         163296 non-null  category      \n",
+      " 1   UF             163296 non-null  category      \n",
+      " 2   COMPETÊNCIA    163296 non-null  datetime64[ns]\n",
+      " 3   REPASSE        163296 non-null  category      \n",
+      " 4   TOTAL AJUSTE   163296 non-null  float64       \n",
+      " 5   TOTAL LIQUIDO  163296 non-null  float64       \n",
+      " 6   CATEGORIA      163296 non-null  category      \n",
+      "dtypes: category(4), datetime64[ns](1), float64(2)\n",
+      "memory usage: 4.4 MB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index                132\n",
+       "ESFERA            163420\n",
+       "UF                164584\n",
+       "COMPETÊNCIA      1306368\n",
+       "REPASSE           163964\n",
+       "TOTAL AJUSTE     1306368\n",
+       "TOTAL LIQUIDO    1306368\n",
+       "CATEGORIA         163684\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.memory_usage()"
    ]
   },
   {
@@ -230,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['TOTAL AJUSTE', 'TOTAL LIQUIDO'], dtype='object')"
+       "Index(['TOTAL AJUSTE', 'TOTAL LIQUIDO'], dtype='object', name='TIPO DE REPASSE')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +291,8 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>TIPO DE REPASSE</th>\n",
+       "      <th>COMPETÊNCIA</th>\n",
        "      <th>TOTAL AJUSTE</th>\n",
        "      <th>TOTAL LIQUIDO</th>\n",
        "    </tr>\n",
@@ -282,61 +300,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>154,224.00</td>\n",
-       "      <td>154,224.00</td>\n",
+       "      <td>163296</td>\n",
+       "      <td>163,296.00</td>\n",
+       "      <td>163,296.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>47,964.30</td>\n",
-       "      <td>14,955,081.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>3,423,352.99</td>\n",
-       "      <td>70,400,981.86</td>\n",
+       "      <td>2015-12-16 10:53:20</td>\n",
+       "      <td>68,091.21</td>\n",
+       "      <td>14,763,894.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>2007-01-01 00:00:00</td>\n",
        "      <td>-213,329,018.65</td>\n",
        "      <td>-177,097,598.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
+       "      <td>2011-06-23 12:00:00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>2015-12-16 12:00:00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>13,817.65</td>\n",
+       "      <td>6,925.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
+       "      <td>2020-06-08 12:00:00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>5,097,294.60</td>\n",
+       "      <td>4,585,400.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>643,644,143.02</td>\n",
+       "      <td>2024-12-01 00:00:00</td>\n",
+       "      <td>696,137,219.82</td>\n",
        "      <td>2,431,147,109.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,550,686.55</td>\n",
+       "      <td>70,659,385.27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         TOTAL AJUSTE    TOTAL LIQUIDO\n",
-       "count      154,224.00       154,224.00\n",
-       "mean        47,964.30    14,955,081.25\n",
-       "std      3,423,352.99    70,400,981.86\n",
-       "min   -213,329,018.65  -177,097,598.83\n",
-       "25%              0.00             0.00\n",
-       "50%              0.00        13,817.65\n",
-       "75%              0.00     5,097,294.60\n",
-       "max    643,644,143.02 2,431,147,109.50"
+       "TIPO DE REPASSE          COMPETÊNCIA    TOTAL AJUSTE    TOTAL LIQUIDO\n",
+       "count                         163296      163,296.00       163,296.00\n",
+       "mean             2015-12-16 10:53:20       68,091.21    14,763,894.63\n",
+       "min              2007-01-01 00:00:00 -213,329,018.65  -177,097,598.83\n",
+       "25%              2011-06-23 12:00:00            0.00             0.00\n",
+       "50%              2015-12-16 12:00:00            0.00         6,925.55\n",
+       "75%              2020-06-08 12:00:00            0.00     4,585,400.58\n",
+       "max              2024-12-01 00:00:00  696,137,219.82 2,431,147,109.50\n",
+       "std                              NaN    4,550,686.55    70,659,385.27"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,22 +399,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ESFERA', 'UF', 'REPASSE'], dtype='object')"
+       "Index(['ESFERA', 'UF', 'REPASSE', 'CATEGORIA'], dtype='object', name='TIPO DE REPASSE')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat_vars = df.dtypes[df.dtypes == 'O'].index\n",
+    "cat_vars = df.dtypes[df.dtypes == 'category'].index\n",
     "cat_vars"
    ]
   },
@@ -417,47 +443,52 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>TIPO DE REPASSE</th>\n",
        "      <th>ESFERA</th>\n",
        "      <th>UF</th>\n",
        "      <th>REPASSE</th>\n",
+       "      <th>CATEGORIA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>154224</td>\n",
-       "      <td>154224</td>\n",
-       "      <td>154224</td>\n",
+       "      <td>163296</td>\n",
+       "      <td>163296</td>\n",
+       "      <td>163296</td>\n",
+       "      <td>163296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
        "      <td>2</td>\n",
        "      <td>27</td>\n",
        "      <td>14</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>Estadual</td>\n",
        "      <td>AC</td>\n",
        "      <td>AFE_EC123</td>\n",
+       "      <td>Outros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
-       "      <td>77112</td>\n",
-       "      <td>5712</td>\n",
-       "      <td>11016</td>\n",
+       "      <td>81648</td>\n",
+       "      <td>6048</td>\n",
+       "      <td>11664</td>\n",
+       "      <td>46656</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ESFERA      UF    REPASSE\n",
-       "count     154224  154224     154224\n",
-       "unique         2      27         14\n",
-       "top     Estadual      AC  AFE_EC123\n",
-       "freq       77112    5712      11016"
+       "TIPO DE REPASSE    ESFERA      UF    REPASSE CATEGORIA\n",
+       "count              163296  163296     163296    163296\n",
+       "unique                  2      27         14        11\n",
+       "top              Estadual      AC  AFE_EC123    Outros\n",
+       "freq                81648    6048      11664     46656"
       ]
      },
      "execution_count": 8,
@@ -466,7 +497,7 @@
     }
    ],
    "source": [
-    "df.describe(include='O')"
+    "df.describe(include='category')"
    ]
   },
   {
@@ -477,7 +508,8 @@
     {
      "data": {
       "text/plain": [
-       "array(['Estadual', 'Municipal'], dtype=object)"
+       "['Estadual', 'Municipal']\n",
+       "Categories (2, object): ['Estadual', 'Municipal']"
       ]
      },
      "execution_count": 9,
@@ -491,18 +523,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['AC', 'AL', 'AM', 'AP', 'BA', 'CE', 'DF', 'ES', 'GO', 'MA', 'MG',\n",
-       "       'MS', 'MT', 'PA', 'PB', 'PE', 'PI', 'PR', 'RJ', 'RN', 'RO', 'RR',\n",
-       "       'RS', 'SC', 'SE', 'SP', 'TO'], dtype=object)"
+       "['AC', 'AL', 'AM', 'AP', 'BA', ..., 'RS', 'SC', 'SE', 'SP', 'TO']\n",
+       "Length: 27\n",
+       "Categories (27, object): ['AC', 'AL', 'AM', 'AP', ..., 'SC', 'SE', 'SP', 'TO']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,16 +563,6 @@
    ],
    "source": [
     "df.REPASSE.unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **ANÁLISE DESCRITIVA**\n",
-    "## QUADRO HISTÓRICO\n",
-    "\n",
-    "(tendência, ruído, velocidade, aceleração, sazonalidade) [Filtros: Período, Esfera, Estado, Transferência]"
    ]
   },
   {
