Ajustes de bugs nos dashboards

--- a/1_Descriptive_data_analisy.ipynb
+++ b/1_Descriptive_data_analisy.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np  # Manipulação de matrizes\n",
@@ -34,13 +38,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **LOAD**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -58,9 +55,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# **ANÁLISE DESCRITIVA**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GERAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -94,54 +109,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>146339</th>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>RR</td>\n",
-       "      <td>2014-01-01</td>\n",
-       "      <td>ITCMD</td>\n",
+       "      <th>6383</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>2008-12-01</td>\n",
+       "      <td>LC8796</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>4,862.10</td>\n",
-       "      <td>ITCMD</td>\n",
+       "      <td>133,686.23</td>\n",
+       "      <td>Outros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133197</th>\n",
-       "      <td>Municipal</td>\n",
+       "      <th>54409</th>\n",
+       "      <td>Estadual</td>\n",
        "      <td>PR</td>\n",
-       "      <td>2007-11-01</td>\n",
-       "      <td>Ajuste</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>COUN_VAAT</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Complementação VAAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74594</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>COUN</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>Outros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10864</th>\n",
+       "      <th>63674</th>\n",
        "      <td>Estadual</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>2017-09-01</td>\n",
-       "      <td>AFE_EC123</td>\n",
+       "      <td>RR</td>\n",
+       "      <td>2008-01-01</td>\n",
+       "      <td>COUN</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>Outros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2976</th>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>2024-09-01</td>\n",
-       "      <td>ICMS</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>ICMS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149622</th>\n",
+       "      <th>114831</th>\n",
        "      <td>Municipal</td>\n",
-       "      <td>RS</td>\n",
-       "      <td>2015-08-01</td>\n",
-       "      <td>COUN_VAAR</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>COUN_VAAF</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>Complementação VAAR</td>\n",
+       "      <td>Complementação VAAF</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -149,21 +164,21 @@
       ],
       "text/plain": [
        "TIPO DE REPASSE     ESFERA  UF COMPETÊNCIA    REPASSE  TOTAL AJUSTE  \\\n",
-       "146339           Municipal  RR  2014-01-01      ITCMD          0.00   \n",
-       "133197           Municipal  PR  2007-11-01     Ajuste          0.00   \n",
-       "10864             Estadual  AP  2017-09-01  AFE_EC123          0.00   \n",
-       "2976              Estadual  AC  2024-09-01       ICMS          0.00   \n",
-       "149622           Municipal  RS  2015-08-01  COUN_VAAR          0.00   \n",
+       "6383              Estadual  AM  2008-12-01     LC8796          0.00   \n",
+       "54409             Estadual  PR  2024-11-01  COUN_VAAT          0.00   \n",
+       "74594             Estadual  SE  2019-01-01       COUN          0.00   \n",
+       "63674             Estadual  RR  2008-01-01       COUN          0.00   \n",
+       "114831           Municipal  MG  2024-07-01  COUN_VAAF          0.00   \n",
        "\n",
        "TIPO DE REPASSE  TOTAL LIQUIDO            CATEGORIA  \n",
-       "146339                4,862.10                ITCMD  \n",
-       "133197                    0.00               Outros  \n",
-       "10864                     0.00               Outros  \n",
-       "2976                      0.00                 ICMS  \n",
-       "149622                    0.00  Complementação VAAR  "
+       "6383                133,686.23               Outros  \n",
+       "54409                     0.00  Complementação VAAT  \n",
+       "74594                     0.00               Outros  \n",
+       "63674                     0.00               Outros  \n",
+       "114831                    0.00  Complementação VAAF  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,15 +189,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **ANÁLISE DESCRITIVA**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +237,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,12 +250,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variáveis numéricas"
+    "## VARIÁVEIS NUMÉRICAS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +264,7 @@
        "Index(['TOTAL AJUSTE', 'TOTAL LIQUIDO'], dtype='object', name='TIPO DE REPASSE')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +370,7 @@
        "std                              NaN    4,550,686.55    70,659,385.27"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,29 +380,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TRATAMENTO DE ANOMALIAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FrozenList([None])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index.names"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Tratamento de duplicados\n",
-    "# df[df.duplicated()]\n",
-    "# # Tratamento de valores ausentes\n",
-    "# df.loc[df.isnull().any(axis=1)]\n",
-    "# # Tratamento de valores inconsistentes ou despadronizados \n",
-    "# ## Foram identificados valores negativos, sendo a maioria ajustes anteriores a 2020 ou contribuições da união, mas há dois casos com impostos, ITCDM e IPVA\n",
-    "# ## Não se sabe ainda o motivo, entretanto, para os valores finais, total liquido, encontran-se os valores informados pelo Fnde\n",
-    "# ## Não fora disponibilizado os metadados e deverá ser feita análise desses valores\n",
-    "# df.loc[df['TOTAL LIQUIDO'] < 0]\n",
-    "# # Tratamento de valores outliers\n",
-    "# ## \n"
+    "# Tratamento de constantes \n",
+    "# - (Não foram identificadas constantes entre os dados)\n",
+    "\n",
+    "# Tratamento de duplicados\n",
+    "df[df.duplicated()]\n",
+    "# - (Não foram identificadas registros duplicados entre os dados)\n",
+    "\n",
+    "# Tratamento de valores ausentes\n",
+    "df.loc[df.isnull().any(axis=1)]\n",
+    "# - (Não foram identificadas registros ausentes entre os dados)\n",
+    "\n",
+    "# Tratamento de valores não padronizados ou inconsistentes\n",
+    "df.loc[df['TOTAL LIQUIDO'] < 0]\n",
+    "# - Foram identificados valores negativos, sendo a maioria ajustes anteriores a 2020 ou contribuições da união, mas há dois casos com impostos, ITCDM e IPVA\n",
+    "# - Não se sabe ainda o motivo, entretanto, para os valores finais, total liquido, encontran-se os valores informados pelo Fnde Não fora disponibilizado os metadados e deverá ser feita análise desses valores\n",
+    "\n",
+    "# Tratamento de outliers\n",
+    "## \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variáveis categóricas"
+    "## VARIÁVEIS CATEGÓRICAS"
    ]
   },
   {
@@ -545,18 +587,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['AFE_EC123', 'Ajuste', 'COUN', 'COUN_VAAF', 'COUN_VAAR',\n",
-       "       'COUN_VAAT', 'FPE', 'FPM', 'ICMS', 'IPI', 'IPVA', 'ITCMD', 'ITR',\n",
-       "       'LC8796'], dtype=object)"
+       "['AFE_EC123', 'Ajuste', 'COUN', 'COUN_VAAF', 'COUN_VAAR', ..., 'IPI', 'IPVA', 'ITCMD', 'ITR', 'LC8796']\n",
+       "Length: 14\n",
+       "Categories (14, object): ['AFE_EC123', 'Ajuste', 'COUN', 'COUN_VAAF', ..., 'IPVA', 'ITCMD', 'ITR', 'LC8796']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12888,7 +12930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
