--- a/test.ipynb
+++ b/test.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from ETL.Data_extraction import *\n",
     "from ETL.Data_transformation import *"
    ]
@@ -27,6 +28,436 @@
    "source": [
     "upgrade_data(fold='./RAW_DATAS')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 163296 entries, 0 to 163295\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column         Non-Null Count   Dtype         \n",
+      "---  ------         --------------   -----         \n",
+      " 0   ESFERA         163296 non-null  category      \n",
+      " 1   UF             163296 non-null  category      \n",
+      " 2   COMPETÊNCIA    163296 non-null  datetime64[us]\n",
+      " 3   REPASSE        163296 non-null  category      \n",
+      " 4   TOTAL AJUSTE   163296 non-null  float64       \n",
+      " 5   TOTAL LIQUIDO  163296 non-null  float64       \n",
+      " 6   CATEGORIA      163296 non-null  category      \n",
+      "dtypes: category(4), datetime64[us](1), float64(2)\n",
+      "memory usage: 4.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_parquet('./DATASETS/summarized_data.parquet').info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>TIPO DE REPASSE</th>\n",
+       "      <th>ESFERA</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>REPASSE</th>\n",
+       "      <th>TOTAL AJUSTE</th>\n",
+       "      <th>TOTAL LIQUIDO</th>\n",
+       "      <th>CATEGORIA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COMPETÊNCIA</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>AFE_EC123</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Outros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>Ajuste</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Outros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>COUN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Outros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>COUN_VAAF</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Complementação VAAF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>Estadual</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>COUN_VAAR</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Complementação VAAR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "TIPO DE REPASSE    ESFERA  UF    REPASSE  TOTAL AJUSTE  TOTAL LIQUIDO  \\\n",
+       "COMPETÊNCIA                                                             \n",
+       "2007-01-01       Estadual  AC  AFE_EC123           0.0            0.0   \n",
+       "2007-01-01       Estadual  AC     Ajuste           0.0            0.0   \n",
+       "2007-01-01       Estadual  AC       COUN           0.0            0.0   \n",
+       "2007-01-01       Estadual  AC  COUN_VAAF           0.0            0.0   \n",
+       "2007-01-01       Estadual  AC  COUN_VAAR           0.0            0.0   \n",
+       "\n",
+       "TIPO DE REPASSE            CATEGORIA  \n",
+       "COMPETÊNCIA                           \n",
+       "2007-01-01                    Outros  \n",
+       "2007-01-01                    Outros  \n",
+       "2007-01-01                    Outros  \n",
+       "2007-01-01       Complementação VAAF  \n",
+       "2007-01-01       Complementação VAAR  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet('./DATASETS/summarized_data.parquet')\n",
+    "df.index = df['COMPETÊNCIA']\n",
+    "df.drop(labels='COMPETÊNCIA', axis='columns', inplace=True)\n",
+    "df_e = df[(df.ESFERA == 'Estadual')]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>TIPO DE REPASSE</th>\n",
+       "      <th>TOTAL AJUSTE</th>\n",
+       "      <th>TOTAL LIQUIDO</th>\n",
+       "      <th>TOTAL ACUMULADO</th>\n",
+       "      <th>dif</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COMPETÊNCIA</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.294853e+09</td>\n",
+       "      <td>3.294853e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-02-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.031552e+09</td>\n",
+       "      <td>6.326405e+09</td>\n",
+       "      <td>-2.633010e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-03-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.443951e+09</td>\n",
+       "      <td>9.770356e+09</td>\n",
+       "      <td>4.123993e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-04-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.575964e+09</td>\n",
+       "      <td>1.434632e+10</td>\n",
+       "      <td>1.132013e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.116513e+09</td>\n",
+       "      <td>1.846283e+10</td>\n",
+       "      <td>-4.594508e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "TIPO DE REPASSE  TOTAL AJUSTE  TOTAL LIQUIDO  TOTAL ACUMULADO           dif\n",
+       "COMPETÊNCIA                                                                \n",
+       "2007-01-01                0.0   3.294853e+09     3.294853e+09           NaN\n",
+       "2007-02-01                0.0   3.031552e+09     6.326405e+09 -2.633010e+08\n",
+       "2007-03-01                0.0   3.443951e+09     9.770356e+09  4.123993e+08\n",
+       "2007-04-01                0.0   4.575964e+09     1.434632e+10  1.132013e+09\n",
+       "2007-05-01                0.0   4.116513e+09     1.846283e+10 -4.594508e+08"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dados agrupados mensalmente\n",
+    "df_month = df.resample('MS').sum(numeric_only=True)\n",
+    "df_month.loc[df_month['TOTAL LIQUIDO'] == 0, 'TOTAL LIQUIDO'] = np.nan\n",
+    "df_month['TOTAL ACUMULADO'] = df_month['TOTAL LIQUIDO'].cumsum()\n",
+    "df_month['dif'] = df_month['TOTAL LIQUIDO'].diff(1)\n",
+    "df_month.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adria\\AppData\\Local\\Temp\\ipykernel_16768\\596297807.py:2: FutureWarning: 'Y' is deprecated and will be removed in a future version, please use 'YE' instead.\n",
+      "  df_year = df.resample('Y').sum(numeric_only=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>TIPO DE REPASSE</th>\n",
+       "      <th>TOTAL AJUSTE</th>\n",
+       "      <th>TOTAL LIQUIDO</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COMPETÊNCIA</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>4.692355e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>6.371102e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>7.293272e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>8.361585e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>9.854037e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.066182e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.166615e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.261891e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.342957e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.423201e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.453263e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.525953e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.685396e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>1.215713e+08</td>\n",
+       "      <td>1.704963e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31</th>\n",
+       "      <td>2.783293e+09</td>\n",
+       "      <td>2.216215e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-31</th>\n",
+       "      <td>2.974962e+09</td>\n",
+       "      <td>2.571352e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>1.517420e+09</td>\n",
+       "      <td>2.691570e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-31</th>\n",
+       "      <td>3.721776e+09</td>\n",
+       "      <td>3.420572e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "TIPO DE REPASSE  TOTAL AJUSTE  TOTAL LIQUIDO\n",
+       "COMPETÊNCIA                                 \n",
+       "2007-12-31       0.000000e+00   4.692355e+10\n",
+       "2008-12-31       0.000000e+00   6.371102e+10\n",
+       "2009-12-31       0.000000e+00   7.293272e+10\n",
+       "2010-12-31       0.000000e+00   8.361585e+10\n",
+       "2011-12-31       0.000000e+00   9.854037e+10\n",
+       "2012-12-31       0.000000e+00   1.066182e+11\n",
+       "2013-12-31       0.000000e+00   1.166615e+11\n",
+       "2014-12-31       0.000000e+00   1.261891e+11\n",
+       "2015-12-31       0.000000e+00   1.342957e+11\n",
+       "2016-12-31       0.000000e+00   1.423201e+11\n",
+       "2017-12-31       0.000000e+00   1.453263e+11\n",
+       "2018-12-31       0.000000e+00   1.525953e+11\n",
+       "2019-12-31       0.000000e+00   1.685396e+11\n",
+       "2020-12-31       1.215713e+08   1.704963e+11\n",
+       "2021-12-31       2.783293e+09   2.216215e+11\n",
+       "2022-12-31       2.974962e+09   2.571352e+11\n",
+       "2023-12-31       1.517420e+09   2.691570e+11\n",
+       "2024-12-31       3.721776e+09   3.420572e+10"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dados agrupados anualmente\n",
+    "df_year = df.resample('Y').sum(numeric_only=True)\n",
+    "df_year.loc[df_year['TOTAL LIQUIDO'] == 0, 'TOTAL LIQUIDO'] = np.nan\n",
+    "df_year"
+   ]
   }
  ],
  "metadata": {
@@ -45,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
